--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,3 +12,38 @@
 @import '~@fortawesome/fontawesome-free/scss/solid';
 @import '~@fortawesome/fontawesome-free/scss/regular';
 @import '~@fortawesome/fontawesome-free/scss/brands';
+
+
+.logo {
+    width: 150px;
+    height: 37.5px;
+}
+
+.animalsCarousel {
+  display: block;
+  width: 100%;
+  height: 30vw;
+  border-radius: 15px;
+}
+
+.top-text {
+  font-weight: bold;
+  margin: 30px 0;
+}
+
+.register-btn {
+  background-color: #7ed957;
+  color: #fff;
+  margin-right: 50px;
+}
+
+.introduction-btn {
+  background-color: #C0C0C0;
+  color: #fff;
+}
+
+#avatar_preview {
+  max-width: 200px;
+  max-height: 200px;
+  border-radius: 20px;
+}
