Add: ユーザー一覧ページの無限スクロール追加

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -26,7 +26,7 @@
   border-radius: 15px;
 }
 
-.register-btn {
+.register_btn {
   background-color: #7ed957;
   color: #fff;
   margin-right: 50px;
@@ -59,3 +59,7 @@
 	}	
 }
 
+.view_more_button {
+  background-color: #7ed957;
+  color: #fff;
+}
