--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17041,7 +17041,7 @@ readers do not read off random characters that represent icons */
   border-radius: 15px;
 }
 
-.register-btn {
+.register_btn {
   background-color: #7ed957;
   color: #fff;
   margin-right: 50px;
@@ -17072,5 +17072,10 @@ readers do not read off random characters that represent icons */
     height: 120px;
     border-radius: 50%;
   }
+}
+
+.view_more_button {
+  background-color: #7ed957;
+  color: #fff;
 }
 
