--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -22,9 +22,10 @@
 .animalsCarousel {
   display: block;
   width: 100%;
-  height: 30vw;
+  height: 35vw;
   border-radius: 15px;
 }
+
 
 .register_btn {
   background-color: #7ed957;
@@ -32,7 +33,7 @@
   margin-right: 50px;
 }
 
-.introduction-btn {
+.introduction_btn {
   background-color: #C0C0C0;
   color: #fff;
 }
