--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,7 +13,26 @@
 @import '~@fortawesome/fontawesome-free/scss/regular';
 @import '~@fortawesome/fontawesome-free/scss/brands';
 
+//select2
+@import '~select2/dist/css/select2.min.css';
 
+@media (max-width: 345px) {
+    #post_image_preview, 
+    #edit_post_image_preview {
+    max-height: 240px;
+  }
+}
+
+
+@media (min-width: 345px) and (max-width: 576px) {
+  #post_image_preview,
+  #edit_post_image_preview {
+    max-height: 340px;
+  }
+}
+
+
+//xsサイズ
 @media (max-width: 576px) {
   .user_show_avatar {
     width: 150px;
@@ -21,10 +40,12 @@
   }
 }
 
+//~sm:maxサイズ
 @media (max-width: 767.98px) {
   //
 }
 
+//smサイズ
 @media (min-width: 576px) and (max-width: 767.98px) {
 	.user_avatar_icon {
 		width: 120px;
@@ -35,8 +56,16 @@
     width: 170px;
     height: 170px;
   }
+  #post_image_preview,
+  #edit_post_image_preview {
+    max-height: 340px;
+  }
+  .post_image_supplement {
+    font-size: 15px;
+  }
 }
 
+//mdサイズ
 @media (min-width: 768px) and (max-width: 991.98px) {
 	.user_avatar_icon {
 		width: 160px;
@@ -47,8 +76,13 @@
 	  width: 200px;
 	  height: 200px;
 	}
+	#post_image_preview,
+	#edit_post_image_preview {
+	  max-height: 400px;
+	}
 }
 
+//~md:maxサイズ
 @media (max-width: 991.98px) {
   #avatar_preview {
     width: 200px;
@@ -56,16 +90,28 @@
   }
 }
 
+//~lg:minサイズ
+@media (min-width: 992px) {
+  #post_image_preview,
+  #edit_post_image_preview {
+    max-width:530px;
+    max-height:430px;
+  }
+}
+
+//ナビゲーション上のアプリロゴ
 .logo {
     width: 150px;
     height: 37.5px;
 }
 
+//ゲストトップページのカルーセル
 .animalsCarousel {
   display: block;
   width: 100%;
-  height: 35vw;
-  border-radius: 15px;
+  height: 50vw;
+  max-height: 460px;
+  border-radius: 7px;
 }
 
 .font-weight-bold {
@@ -100,3 +146,34 @@
   background-color: #6cb2eb;
   border-color: #6cb2eb;
 }
+
+//新規投稿（no-image画像）
+.default_post_image {
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+//新規投稿、投稿編集
+.post_image_edit {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  background-color: #FFFFFF;
+  padding: 7px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+
+.post_image_supplement {
+  color: #808080;
+}
+
+//投稿の本文
+.post_content {
+  overflow: hidden;
+  
+}
+
+.card {
+  border: 1px solid rgba(255, 255, 255,);
+}
+
