--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -16,13 +16,22 @@
 //select2
 @import '~select2/dist/css/select2.min.css';
 
+@media (max-width: 311px) {
+  .follow_button,
+  .action_follow {
+    font-size: 10px;
+  }
+  .unfollow_button {
+    font-size: 9px;
+  }
+}
+
 @media (max-width: 345px) {
     #post_image_preview, 
     #edit_post_image_preview {
     max-height: 240px;
   }
 }
-
 
 @media (min-width: 345px) and (max-width: 576px) {
   #post_image_preview,
@@ -52,6 +61,11 @@
 		height: 120px;
 		border-radius: 50%;
 	}
+	.followings_icon {
+	  width: 110px;
+	  height: 110px;
+	  border-radius: 50%;
+	}
   .user_show_avatar {
     width: 170px;
     height: 170px;
@@ -67,11 +81,12 @@
 
 //mdサイズ
 @media (min-width: 768px) and (max-width: 991.98px) {
-	.user_avatar_icon {
+	.user_avatar_icon,
+	.followings_icon {
 		width: 160px;
 		height: 160px;
 		border-radius: 50%;
-	}	
+	}
 	.user_show_avatar {
 	  width: 200px;
 	  height: 200px;
@@ -177,3 +192,33 @@
   border: 1px solid rgba(255, 255, 255,);
 }
 
+//ホバー時フォロー中ボタンの色変更
+.follow_button:hover {
+  background-color: #d0211c;
+  border-color: #c51f1a;
+}
+
+//ホバー時のアンフォローボタン文字(通常は非表示)
+button .unfollow_button {
+  display: none;
+}
+
+//ホバー時は通常フォロー中のボタン文字を非表示
+button:hover .follow_now_button {
+  display: none;
+}
+
+//ホバー時のアンフォローボタン文字の表示
+button:hover .unfollow_button {
+  display: inline;
+}
+
+//ヘッダーナビゲーション
+.header_navbar {
+  width: 100vw;
+  max-width: 1700px;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
+}
