--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17030,7 +17030,7 @@ readers do not read off random characters that represent icons */
   font-weight: 400;
 }
 
-@media (max-width: 311px) {
+@media (max-width: 315px) {
   .follow_button,
   .action_follow {
     font-size: 10px;
@@ -17039,12 +17039,27 @@ readers do not read off random characters that represent icons */
   .unfollow_button {
     font-size: 9px;
   }
+
+  .card-title {
+    font-size: 3.4vw;
+  }
+}
+
+@media (min-width: 315px) and (max-width: 375px) {
+  .card-title {
+    font-size: 3.7vw;
+  }
 }
 
 @media (max-width: 345px) {
   #post_image_preview,
   #edit_post_image_preview {
     max-height: 240px;
+  }
+
+  .user_name,
+  .like_user_name {
+    font-size: 4vw;
   }
 }
 
@@ -17062,19 +17077,15 @@ readers do not read off random characters that represent icons */
   }
 }
 
-@media (min-width: 576px) and (max-width: 767.98px) {
+@media (max-width: 767.98px) {
   .user_avatar_icon {
     width: 120px;
     height: 120px;
     border-radius: 50%;
   }
+}
 
-  .followings_icon {
-    width: 110px;
-    height: 110px;
-    border-radius: 50%;
-  }
-
+@media (min-width: 576px) and (max-width: 767.98px) {
   .user_show_avatar {
     width: 170px;
     height: 170px;
@@ -17088,11 +17099,15 @@ readers do not read off random characters that represent icons */
   .post_image_supplement {
     font-size: 15px;
   }
+
+  .user_name,
+  .like_user_name {
+    font-size: 77%;
+  }
 }
 
 @media (min-width: 768px) and (max-width: 991.98px) {
-  .user_avatar_icon,
-  .followings_icon {
+  .user_avatar_icon {
     width: 160px;
     height: 160px;
     border-radius: 50%;
@@ -17106,6 +17121,10 @@ readers do not read off random characters that represent icons */
   #post_image_preview,
   #edit_post_image_preview {
     max-height: 400px;
+  }
+
+  .nav_user_name {
+    font-size: 53%;
   }
 }
 
@@ -17135,10 +17154,6 @@ readers do not read off random characters that represent icons */
   height: 50vw;
   max-height: 460px;
   border-radius: 7px;
-}
-
-.font-weight-bold {
-  font-size: 1.3em;
 }
 
 .btn-outline-success {
@@ -17195,6 +17210,11 @@ readers do not read off random characters that represent icons */
   border: 1px solid white;
 }
 
+.post_image_card {
+  width: 100%;
+  max-height: 640px;
+}
+
 .follow_button:hover {
   background-color: #d0211c;
   border-color: #c51f1a;
@@ -17210,6 +17230,44 @@ button:hover .follow_now_button {
 
 button:hover .unfollow_button {
   display: inline;
+}
+
+.like_now_button,
+.like_button {
+  color: #FF0461;
+  background-color: #fffff;
+  padding: 0;
+  margin: 0;
+  width: 2.1rem;
+  height: 2.1rem;
+  line-height: 2.1rem;
+  text-align: center;
+  display: inline-block;
+  border-radius: 50%;
+}
+
+.like_button {
+  color: #BBBBBB;
+  background-color: #fffff;
+  padding: 0;
+  margin: 0;
+  width: 2.1rem;
+  height: 2.1rem;
+  line-height: 2.1rem;
+  text-align: center;
+  display: inline-block;
+  border-radius: 50%;
+}
+
+.like_now_button:hover,
+.like_button:hover {
+  background-color: #FFD5EC;
+  color: #FF0461;
+}
+
+.btn:focus {
+  outline: none;
+  box-shadow: none;
 }
 
 .header_navbar {
