フラッシュメッセージスタイル作成

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -16,6 +16,9 @@
 //select2
 @import '~select2/dist/css/select2.min.css';
 
+//toastr
+@import "toastr";
+
 @media (max-width: 315px) {
 
   .follow_button,
