--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -2,7 +2,7 @@
 $body-bg: #fff;
 
 // Typography
-$font-family-sans-serif: 'Nunito', sans-serif;
+$font-family-sans-serif: 'Noto Sans JP', 'Sawarabi Gothic', sans-serif;
 $font-size-base: 1.0rem;
 $line-height-base: 1.6;
 
