Improve: いいね登録・解除を非同期通信へ変更

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17651,8 +17651,7 @@ button:hover .unfollow_button {
   display: inline;
 }
 
-.like_now_button,
-.like_button {
+.like_now_icon {
   color: #FF0461;
   background-color: #fffff;
   padding: 0;
@@ -17665,7 +17664,7 @@ button:hover .unfollow_button {
   border-radius: 50%;
 }
 
-.like_button {
+.like_icon {
   color: #BBBBBB;
   background-color: #fffff;
   padding: 0;
@@ -17678,7 +17677,6 @@ button:hover .unfollow_button {
   border-radius: 50%;
 }
 
-.like_now_button:hover,
 .like_button:hover {
   background-color: #FFD5EC;
   color: #FF0461;
