--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17283,13 +17283,19 @@ button.toast-close-button {
 }
 
 @media (max-width: 315px) {
-  .follow_button,
-  .action_follow {
-    font-size: 10px;
+  .follow_button:hover {
+    background-color: #d0211c;
+    border-color: #c51f1a;
+    font-size: 0 !important;
   }
 
-  .unfollow_button {
-    font-size: 9px;
+  .follow_button:hover:before {
+    font-size: 10px !important;
+    content: "\30D5\30A9\30ED\30FC\89E3\9664" !important;
+  }
+
+  .follow {
+    font-size: 10px;
   }
 
   .p_search_button,
@@ -17637,18 +17643,26 @@ button.toast-close-button {
 .follow_button:hover {
   background-color: #d0211c;
   border-color: #c51f1a;
+  font-size: 0;
 }
 
-button .unfollow_button {
-  display: none;
+.follow_button:hover:before {
+  font-size: 0.875rem;
+  content: "\30D5\30A9\30ED\30FC\89E3\9664";
 }
 
-button:hover .follow_now_button {
-  display: none;
+.follow_button:not(:disabled):not(.disabled):active,
+.follow_button:not(:disabled):not(.disabled).active,
+.show > .follow_button.dropdown-toggle {
+  color: #fff;
+  background-color: #c51f1a;
+  border-color: #b91d19;
 }
 
-button:hover .unfollow_button {
-  display: inline;
+.follow_button:not(:disabled):not(.disabled):active:focus,
+.follow_button:not(:disabled):not(.disabled).active:focus,
+.show > .follow_button.dropdown-toggle:focus {
+  box-shadow: 0 0 0 0.2rem rgba(231, 82, 78, 0.5);
 }
 
 .like_now_icon {
