--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -679,3 +679,48 @@ textarea {
         border-color: #e3342f;
     }
 }
+
+/* ページトップへ戻るボタン関係　始り */
+//ページトップへ戻るボタン
+#page_top_button {
+  width: 70px;
+  height: 70px;
+  position: fixed;
+  right: 10px;
+  bottom: -70px;
+  background: #7ed957;
+  opacity: 0.7;
+  border-radius: 50%;
+}
+
+//ページトップへ戻るボタン
+#page_top_button a {
+  position: relative;
+  display: block;
+  width: 70px;
+  height: 70px;
+  text-decoration: none;
+}
+
+//ページトップへ戻るボタンアイコン
+#page_top_button i {
+  font-size: 35px;
+  color: #ffffff;
+  position: absolute;
+  width: 35px;
+  height: 35px;
+  top: -5px;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
+  text-align: center;
+}
+
+//ページトップへ戻るボタンポジション
+@media screen and (min-width: 1500px){
+  #page_top_button {
+    right: calc(50% - 750px);
+  }
+}
+/* ページトップへ戻るボタン関係　終り  */
